src/main/default/objects/Quote_Item__c/fields/Auto_Added__c.field-meta.xml
<CustomField>
    <fullName>Auto_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the item was added to the quote automatically. An item gets added to a quote automatically if the linked price book item has a default quantity or the linked price book item has a parent price book item.</inlineHelpText>
    <label>Auto Added</label>
    <type>Checkbox</type>
</CustomField>