src/main/default/objects/Quote_Item__c/fields/Catalog_UOM__c.field-meta.xml
<CustomField>
    <fullName>Catalog_UOM__c</fullName>
    <description>The Unit of Measure copied from the corresponding catalog item.</description>
    <inlineHelpText>Unit of measurement used for the quote item. The quote item inherits this unit of measurement from the linked catalog item.</inlineHelpText>
    <label>Catalog UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>