src/main/default/objects/Quote_Item__c/fields/Created_in_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the item was added to the quote in FieldFX Mobile. If unselected, the item was added to the quote in FieldFX Back office.</inlineHelpText>
    <label>Created in Mobile</label>
    <type>Checkbox</type>
</CustomField>