src/main/default/objects/Quote_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Catalog description for the quote item. The quote item inherits this description from the linked catalog item by default. If the linked price book item has a description override, the quote item inherits that description.</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>