src/main/default/objects/Quote_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <inlineHelpText>Catalog item code for the quote item. The quote item inherits this code from the linked catalog item.</inlineHelpText>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>