src/main/default/objects/Quote_Item__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override</label>
    <referenceTo>Override__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>