src/main/default/objects/Quote_Item__c/fields/Parent_Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent item for the quote item. When you add a parent item to a quote, any designated child items also get added. You cannot add child items to quotes individually without adding their parent first.</inlineHelpText>
    <label>Parent Quote Item</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>