src/main/default/objects/Quote_Item__c/fields/PBI_Enable_Dynamic_Parenting__c.field-meta.xml
<CustomField>
    <fullName>PBI_Enable_Dynamic_Parenting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the quote item has been designated as a dynamic parent. You can add child items to dynamic parent items when adding quotes.</inlineHelpText>
    <label>PBI Enable Dynamic Parenting</label>
    <type>Checkbox</type>
</CustomField>