src/main/default/objects/Quote_Item__c/fields/PBI_Included_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PBI_Included_Quantity__c</fullName>
    <inlineHelpText>Quantity of the item given to the customer at no charge. The quote item inherits this quantity from the linked price book item.</inlineHelpText>
    <label>PBI Included Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>