src/main/default/objects/Quote_Item__c/fields/PBI_Locked_Description__c.field-meta.xml
<CustomField>
    <fullName>PBI_Locked_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users cannot change the catalog description for the quote item.</inlineHelpText>
    <label>PBI Locked Description</label>
    <type>Checkbox</type>
</CustomField>