src/main/default/objects/Quote_Item__c/fields/PBI_Locked_Discount__c.field-meta.xml
<CustomField>
    <fullName>PBI_Locked_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users cannot change the discount granted on the quote item.</inlineHelpText>
    <label>PBI Locked Discount</label>
    <type>Checkbox</type>
</CustomField>