src/main/default/objects/Quote_Item__c/fields/PBI_Locked_Price_Markup__c.field-meta.xml
<CustomField>
    <fullName>PBI_Locked_Price_Markup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users cannot change the price charged for the quote item.</inlineHelpText>
    <label>PBI Locked Price Markup</label>
    <type>Checkbox</type>
</CustomField>