src/main/default/objects/Quote_Item__c/fields/PBI_Override_Price_Method__c.field-meta.xml
<CustomField>
    <fullName>PBI_Override_Price_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBI Override Price Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Override_Config__c.Override_Type__c</field>
            <operation>equals</operation>
            <value>Price</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Override_Config__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items_Override_Price</relationshipName>
    <type>Lookup</type>
</CustomField>