src/main/default/objects/Quote_Item__c/fields/PBI_Required_Item__c.field-meta.xml
<CustomField>
    <fullName>PBI_Required_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, this item will automatically be added to all new Tickets.</description>
    <inlineHelpText>If selected, the item gets added automatically to all new tickets.</inlineHelpText>
    <label>PBI Required Item</label>
    <type>Checkbox</type>
</CustomField>