src/main/default/objects/Quote_Item__c/fields/PBI_Requires_Parent_Item__c.field-meta.xml
<CustomField>
    <fullName>PBI_Requires_Parent_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, the item cannot be added to a ticket by itself. It can only be associated as a child item of another price book item and then added to a ticket by adding the respective parent item.</description>
    <inlineHelpText>If selected, the item and its parent price book item get added automatically to all new tickets.</inlineHelpText>
    <label>PBI Requires Parent Item</label>
    <type>Checkbox</type>
</CustomField>