src/main/default/objects/Quote_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <inlineHelpText>List price for the quote item. The quote item inherits this price from the linked price book item. Users can change the price when adding a quote if granted sufficient permissions.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>