src/main/default/objects/Quote_Item__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Price book item linked to the quote item. The quote item inherits pricing information from the linked price book item.</inlineHelpText>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>