src/main/default/objects/Quote_Item__c/fields/Rule_Required_Item__c.field-meta.xml
<CustomField>
    <fullName>Rule_Required_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the item is required on the quote by the Rule Engine.</inlineHelpText>
    <label>Rule Required Item</label>
    <type>Checkbox</type>
</CustomField>