src/main/default/objects/Quote_Item__c/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number used to determine the order in which the quote item displays in lists. The quote item inherits this number from the linked price book item.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>